Added retina support for splash screen and home page logo.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
                     height: 60px;
                 }
             }
+            #home-logo {
+                background: url('assets/images/pb-home-logo.png') no-repeat center;
+                background-size: 190px 50px;
+                height: 50px;
+            }
+            
+            @media (-webkit-min-device-pixel-ratio: 2) {
+                #home-logo {
+                    background: url('assets/images/pb-home-logo-@2x.png') no-repeat center;
+                    background-size: 190px 50px;
+                    height: 50px;
+                }
+            }
         </style>
 	</body>
 </html>
