Added angular-mobile service for page transitions. Added validations for signup and login.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 		
 		<meta name="rjb" content="PeddleBuddy">
 		
+        <link rel="stylesheet" href="css/mobile-nav.css">
 	    <link rel="stylesheet" href="css/ratchet.css">
 		<link rel="stylesheet" href="css/style.css">
 		<title>PeddleBuddy</title>
 	</head>
 	
 	<body>
-		<ng-view></ng-view>
+		<mobile-view/>
         
         <script type="text/javascript" src="cordova-2.9.0.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
 
         <script src="lib/angular.min.js"></script>
+        <script src="lib/angular-mobile.js"></script>
+        <script src="lib/mobile-nav.js"></script>
 
 		<script src="js/app.js"></script>
 		<script src="js/services.js"></script>
