Added Spinner service to handle loading forms with spin.js to display spinner. Dropped the Notification service in favor of placing the messages within the Parse service.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             app.initialize();
         </script>
         
+        <script src="lib/spin.js"></script>
+        <script src="lib/angular-spinner.js"></script>
+        
         <style type="text/css" media="screen">
             #welcome-page {
                 background: url('assets/images/pb-welcome.png') no-repeat;
