Added ParseUser service to check if user is logged in for route redirecting. Added First draft of the new home screen with 4 button layout.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         width, height=device-height, target-densitydpi=device-dpi" />		
 		
 		<meta name="rjb" content="PeddleBuddy">
-		
+
+        <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/mobile-nav.css">
 	    <link rel="stylesheet" href="css/ratchet.css">
 		<link rel="stylesheet" href="css/style.css">
