Added PageController and page partials. Pages are used to hold more static type files such as FAQs, Privacy Policy, TOS, etc. Added angular-sanitize to sanitize HTML from pages.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <script type="text/javascript" src="js/index.js"></script>
 
         <script src="lib/angular.min.js"></script>
+        <script src="lib/angular-sanitize.min.js"></script>
         <script src="lib/angular-mobile.js"></script>
         <script src="lib/mobile-nav.js"></script>
 
