--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/mobile-nav.css">
-	    <link rel="stylesheet" href="css/ratchet.css">
+	    <link rel="stylesheet" href="css/ratchet2.css">
+        <link rel="stylesheet" href="css/ratchet-theme.css">
 		<link rel="stylesheet" href="css/style.css">
 		<title>PeddleBuddy</title>
 	</head>
