Added the bar-tab tab navigation dummy to index.html. This is a simple hack that allows for slide transitions to make it appear as if the tabs do not move.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
 	
 	<body>
 		<mobile-view/>
+        <nav class="bar-tab">
+            <ul class="tab-inner">
+                <li class="tab-item active">
+                    <img ng-src="assets/images/dashboard.png" />
+                </li>
+                <li class="tab-item">
+                    <img ng-src="assets/images/activity.png" />
+                </li>
+                <li class="tab-item">
+                    <img ng-src="assets/images/settings.png" />
+                </li>
+            </ul>
+        </nav>
         
         <script type="text/javascript" src="cordova-2.9.0.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
