--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-
         width, height=device-height, target-densitydpi=device-dpi" />		
 		
-		<meta name="rjb" content="PeddleBuddy">
+		<meta name="PeddleBuddy" content="PeddleBuddy">
 
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/mobile-nav.css">
-	    <link rel="stylesheet" href="css/ratchet2.css">
-        <link rel="stylesheet" href="css/ratchet-theme.css">
-		<link rel="stylesheet" href="css/style.css">
-		<title>PeddleBuddy</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="css/mobile-nav.css">
+	    <link rel="stylesheet" type="text/css" href="css/ratchet2.css">
+        <link rel="stylesheet" type="text/css" href="css/ratchet-theme.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+
+        <title>PeddleBuddy</title>
 	</head>
 	
 	<body>
 		<mobile-view/>
-        <nav class="bar-tab">
+        <nav class="bar-tab tab-holder">
             <ul class="tab-inner">
-                <li class="tab-item active">
+                <li class="tab-item">
                     <img ng-src="assets/images/dashboard.png" />
                 </li>
                 <li class="tab-item">
@@ -32,21 +33,41 @@
                     <img ng-src="assets/images/settings.png" />
                 </li>
             </ul>
+            <ul class="tab-inner">
+                <li class="tab-item">
+                    <img ng-src="assets/images/dashboard-active.png" />
+                </li>
+                <li class="tab-item">
+                    <img ng-src="assets/images/activity-active.png" />
+                </li>
+                <li class="tab-item">
+                    <img ng-src="assets/images/settings-active.png" />
+                </li>
+            </ul>
         </nav>
         
         <script type="text/javascript" src="cordova-2.9.0.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="app/index.js"></script>
 
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-sanitize.min.js"></script>
         <script src="lib/angular-mobile.js"></script>
         <script src="lib/mobile-nav.js"></script>
 
-		<script src="js/app.js"></script>
-		<script src="js/services.js"></script>
-		<script src="js/controllers.js"></script>
-		<script src="js/directives.js"></script>
+		<script src="app/app.js"></script>
+		<script src="app/services.js"></script>
+		<script src="app/directives.js"></script>
 
+        <script src="app/account/account.js"></script>
+        <script src="app/activity/activity.js"></script>
+        <script src="app/home/home.js"></script>
+        <script src="app/learn/learn.js"></script>
+        <script src="app/pages/pages.js"></script>
+        <script src="app/sell/sell.js"></script>
+        <script src="app/settings/settings.js"></script>
+        <script src="app/user/user.js"></script>
+        <script src="app/welcome/welcome.js"></script>
+        
 		<script src="lib/ratchet.js"></script>
 		<script src="lib/parse-1.2.8.min.js"></script>
 
