--- a/app/learn/learn.html
+++ b/app/learn/learn.html
@@ -2,10 +2,12 @@
     <a class="button-prev" ng-click="$navigate.back()">
     	Back
   	</a>
-  	<h1 class="title">PeddleBuddy</h1>
+  	<h1 class="title">How it Works</h1>
 </header>
 
-<div class="content content-padded">
+<div class="content content-padded center">
    <br/>
-   Learn more!!!
+   1. Snap a few photos.<br/>
+   2. We sell it for you.<br/>
+   3. Schedule a pickup and we'll pack & ship it.
 </div>
