--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -2,10 +2,12 @@
     <br/>
     <div id="welcome-logo"></div>
     <div class="welcome">
-        <div class="welcome-msg">We sell for you</div>
+        <div class="welcome-msg">
+            We sell your stuff for you.
+        </div>
         <div class="welcome-more">
             <span class="welcome-more-l">
-                <a ng-click="$navigate.go('/learn', 'slide')">Learn More</a>
+                <a ng-click="$navigate.go('/learn', 'slide')">How it Works &rarr;</a>
             </span>
         </div>
     </div>
