--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	    <link rel="stylesheet" type="text/css" href="css/ratchet2.css">
         <link rel="stylesheet" type="text/css" href="css/ratchet-theme.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" id="ios-seven-stylesheet" href="">
 
         <title>PeddleBuddy</title>
 	</head>
