--- a/app/home/home.html
+++ b/app/home/home.html
@@ -14,8 +14,8 @@
     </div>
     <div class="sell-bullets">
         <ul>
-            <li>Take 4 to 8 photos.</li>
-            <li>Photograph labels, tags, and</li>
+            <li>&bull; Take 4 to 8 photos.</li>
+            <li>&bull; Photograph labels, tags and</li>
             <li>any unique details.</li>
         </ul>
     </div>
