Updated wording on home screen.

--- a/app/activity/activity-item.html
+++ b/app/activity/activity-item.html
@@ -29,7 +29,7 @@
         </div>
 	</div>
     <div style="clear:both;">&nbsp;</div>
-    <a class="button-negative button-block" ng-click="cancelListing()" confirm-action="This will immedietly cancel the sale of this item." confirm-action-title="Cancel this sale?">
+    <a class="button-negative button-block button-filled" ng-click="cancelListing()" confirm-action="This will immedietly cancel the sale of this item." confirm-action-title="Cancel this sale?">
         Cancel Sale
     </a>
 </div>
