--- a/app/home/home.html
+++ b/app/home/home.html
@@ -5,7 +5,7 @@
 <div class="content content-padded center home-content">
     <br/>
     <div class="snap-text">
-        Sell your first item.
+        Tap to sell
     </div>
     <div class="navi">
         <a ng-click="$navigate.go('/sell', 'modal')" style="padding:35px 0;">
