--- a/app/sell/sell-success.html
+++ b/app/sell/sell-success.html
@@ -11,10 +11,9 @@
 <div class="content content-padded gray-background">
     <br/>
     <h3>Success!</h3>
-    <br/>
     <p>Your item has been successfully listed! We'll have your item up for sale within 24 hours ;)</p>
     <br/><br/>
-    <a ng-click="$navigate.back()" class="btn button button-block get-started">
+    <a ng-click="$navigate.back()" class="btn button button-block button-primary button-filled">
         Sell Another Item
     </a>
 </div>
