--- a/app/learn/learn-get-paid.html
+++ b/app/learn/learn-get-paid.html
@@ -2,18 +2,16 @@
     <a class="button-prev" ng-click="$navigate.back()">
     	Back
   	</a>
-  	<h1 class="title">How it Works</h1>
+  	<h1 class="title">Getting paid</h1>
 </header>
 
 <div class="content content-padded center">
     <br/>
-    <p>1. Snap a few photos.</p>
-    <p>2. We sell it for you.</p>
-    <p>3. We pick it up, pack it and ship it for you.</p>
-    <br/>
+    <p>After we sell your item we'll schedule one of our couriers to pickup and pay you for your item.</p>
+    <p>Selling through PeddleBuddy is 19% of the sale price and a courier will pickup, pack and ship your item for free. For total sales of $25 or less will incur a courier fee of $5.</p>
     <div class="welcome-more">
         <span class="welcome-more-l">
-            <a ng-click="$navigate.go('/learn-what-sells', 'slide')">What can I sell? &rarr;</a>
+            <a ng-click="$navigate.go('/learn-returns', 'slide')">What about returns? &rarr;</a>
         </span>
     </div>
 </div>
