--- a/app/learn/learn-returns.html
+++ b/app/learn/learn-returns.html
@@ -2,20 +2,17 @@
     <a class="button-prev" ng-click="$navigate.back()">
     	Back
   	</a>
-  	<h1 class="title">How it Works</h1>
+  	<h1 class="title">Returns</h1>
 </header>
 
 <div class="content content-padded center">
     <br/>
-    <p>1. Snap a few photos.</p>
-    <p>2. We sell it for you.</p>
-    <p>3. We pick it up, pack it and ship it for you.</p>
-    <br/>
-    <div class="welcome-more">
-        <span class="welcome-more-l">
-            <a ng-click="$navigate.go('/learn-what-sells', 'slide')">What can I sell? &rarr;</a>
-        </span>
-    </div>
+    <p>
+        We think selling your stuff should be completely pain free.
+    </p>
+    <p>
+        Returns are sent back to us so once your item sells you don't have to worry about selling it all over again.
+    </p>
 </div>
 
 <nav class="bar-tab welcome-tab">
