--- a/app/learn/learn-what-sells.html
+++ b/app/learn/learn-what-sells.html
@@ -2,18 +2,18 @@
     <a class="button-prev" ng-click="$navigate.back()">
     	Back
   	</a>
-  	<h1 class="title">How it Works</h1>
+  	<h1 class="title">What sells</h1>
 </header>
 
 <div class="content content-padded center">
     <br/>
-    <p>1. Snap a few photos.</p>
-    <p>2. We sell it for you.</p>
-    <p>3. We pick it up, pack it and ship it for you.</p>
+    <p>Apparel, Purses and Handbags.</p>
+    <p>Jewelry and Accessories</p>
+    <p>Electronics iPhone, Android, Tablet, Laptops, etc.</p>    
     <br/>
     <div class="welcome-more">
         <span class="welcome-more-l">
-            <a ng-click="$navigate.go('/learn-what-sells', 'slide')">What can I sell? &rarr;</a>
+            <a ng-click="$navigate.go('/learn-get-paid', 'slide')">How do I get paid? &rarr;</a>
         </span>
     </div>
 </div>
