Reordered tab... Activity-Sell-Settings.

--- a/app/sell/sell-success.html
+++ b/app/sell/sell-success.html
@@ -17,7 +17,7 @@
     <br/>
     <div class="center">
         <a  ng-click="$navigate.go('/', 'slide')">
-            Back to Dashboard
+            Go to Dashboard
         </a>
     </div>
 </div>
