--- a/app/home/home.html
+++ b/app/home/home.html
@@ -14,24 +14,22 @@
     </div>
     <div class="sell-bullets">
         <ul>
-            <li>&bull; Take 4 to 8 photos.</li>
-            <li>&bull; Photograph labels, tags and</li>
-            <li>any unique details.</li>
+            <li>&bull; Snap 4 to 8 photos</li>
+            <li>&bull; Labels and tags</li>
+            <li>&bull; Plus any unique details</li>
         </ul>
     </div>
 </div>
 
 <nav class="bar-tab">
     <ul class="tab-inner">
-        <li class="tab-item active">
-            <a href="#">
-                <img ng-src="assets/images/dashboard-active.png" />
-            </a>
-        </li>
         <li class="tab-item">
             <a ng-click="$navigate.go('/activity', 'none')">
                 <img ng-src="assets/images/activity.png" />
             </a>
+        </li>
+        <li class="tab-item active">
+            <img ng-src="assets/images/dashboard-active.png" />
         </li>
         <li class="tab-item">
             <a ng-click="$navigate.go('/settings', 'none')">
