--- a/app/activity/activity.html
+++ b/app/activity/activity.html
@@ -24,7 +24,7 @@
                         <p>
                     </div>
                     <div class="span3">
-                        <img ng-src="{{ listing.get('photos')[0].get('photo').url() }}" width="100px" height="100px" />
+                        <img ng-src="{{ listing.get('photos')[0].get('thumbnail').url() }}" width="100px" height="100px" />
                     </div>
                 </div>
 			</a>
