--- a/app/home/home.html
+++ b/app/home/home.html
@@ -14,8 +14,8 @@
     </div>
     <div class="sell-bullets">
         <ul>
-            <li>&bull; Snap 4 to 8 photos</li>
-            <li>&bull; Labels and tags</li>
+            <li>&bull; 4 to 8 photos</li>
+            <li>&bull; Snap labels and tags</li>
             <li>&bull; Plus any unique details</li>
         </ul>
     </div>
