--- a/app/learn/learn.html
+++ b/app/learn/learn.html
@@ -5,25 +5,37 @@
   	<h1 class="title">How it Works</h1>
 </header>
 
-<div class="content content-padded center">
+<div class="content content-padded">
     <br/>
-    <p>1. Snap a few photos.</p>
-    <p>2. We sell it for you.</p>
-    <p>3. We pick it up, pack it and ship it for you.</p>
+    
+    <ul class="table-view inset selling-form learn-more">
+        <li class="table-view-cell list-divider">1. Snap some photos</li>
+        <li class="table-view-cell">
+            Snap some photos of what you would like to sell. Right now we can help you sell:
+            <br/><br/>
+            <p>
+                Clothing and appare. Purses...
+            </p>
+        </li>
+    </ul>
     <br/>
+    <ul class="table-view inset selling-form learn-more">
+        <li class="table-view-cell list-divider">2. We sell for you</li>
+        <li class="table-view-cell">
+            We get to work...
+        </li>
+    </ul>
+    <br/>
+    <ul class="table-view inset selling-form learn-more">
+        <li class="table-view-cell list-divider">3. We pick it up and ship it</li>
+        <li class="table-view-cell">
+            One of our couriers will pickup your item, pack it up and ship it for you. As soon as they pick it up, and make sure it's all good, we send a payment right to your checking account.
+        </li>
+    </ul>
+
     <div class="welcome-more">
         <span class="welcome-more-l">
-            <a ng-click="$navigate.go('/learn-what-sells', 'slide')">What can I sell? &rarr;</a>
+            <a ng-click="$navigate.go('/learn-get-paid', 'slide')">How do I get paid? &rarr;</a>
         </span>
     </div>
 </div>
-
-<nav class="bar-tab welcome-tab">
-    <ul class="tab-inner">
-        <li class="tab-item content-padded signup-tab">
-            <a ng-click="$navigate.go('/user-signup-1', 'slide')">
-                Sign Up
-            </a>
-        </li>
-    </ul>
-</nav>
