--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -10,23 +10,5 @@
 
 <div class="content content-padded" ng-init="getPage('About')">
     <h3>{{ title }}</h3>
-    <div ng-bind-html-unsafe="content"></div>
+    <div ng-bind-html="content"></div>
 </div>
-
-<nav class="bar-tab">
-    <ul class="tab-inner">
-        <li class="tab-item">
-            <a ng-click="$navigate.go('/activity', 'none')">
-                <img ng-src="assets/images/activity.png" />
-            </a>
-        </li>
-        <li class="tab-item">
-            <a ng-click="$navigate.go('/', 'none')">
-                <img ng-src="assets/images/dashboard.png" />
-            </a>
-        </li>
-        <li class="tab-item">
-            <img ng-src="assets/images/settings-active.png" />
-        </li>
-    </ul>
-</nav>
